(lang dune 3.0)

(generate_opam_files true)

(package
 (name dominai)
 (synopsis "A web server for running dominion games")
 (depends
  core
  dream
  jsonrpc
  yojson
  react
  ppx_yojson_conv
  lwt_ppx
  ppx_sexp_conv
  stdio
  ppx_deriving
  tyxml
  omd
  base64
  js_of_ocaml
  js_of_ocaml-ppx
  js_of_ocaml-tyxml
  js_of_ocaml-lwt))
