(executable
 (public_name dominai)
 (name main)
 (libraries
  dominai
  core
  dream
  jsonrpc
  yojson
  react
  tyxml
  omd
  base64
  js_of_ocaml)
 (preprocess
  (pps
   lwt_ppx
   ppx_let
   ppx_yojson_conv
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_sexp_conv))
 (preprocessor_deps
  (alias_rec app)))
